[build-summary] Fixed URL Bug (2021-09-21-2120)

--- a/.github/workflows/upload-data-manual.yml
+++ b/.github/workflows/upload-data-manual.yml
@@ -40,6 +40,7 @@ jobs:
         git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
         cp /tmp/startups_lk.* .
+        cp /tmp/README.md .
         echo "* $(date)" >> update.log
         git add .
         git commit -m "Updated data $(date)"
