--- a/.github/workflows/upload-data-manual.yml
+++ b/.github/workflows/upload-data-manual.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Run - Upload Data
       run: |
         export PYTHONPATH="$PYTHONPATH:./src"
-        python src/startups_lk/scrape.py
+        python src/startups_lk/startups.py
 
     - name: Checkout repo branch data
       uses: actions/checkout@v2
